fixed overflow x issue on event details page

--- a/src/components/events_elements/EventListItem.module.css
+++ b/src/components/events_elements/EventListItem.module.css
@@ -4,7 +4,7 @@
     border-radius: 8px;
     border: none;
     padding: 10px;
-    width: fit-content;
+    position: relative;
 }
 
 .list-item > a {
@@ -16,15 +16,22 @@
     max-width: 350px;
 }
 
-.booked_event_img {
+/* .booked_event_img {
     height: 90px;
     width: 110px;
     border-radius: 12px;
+} */
+
+.time-details {
+    display: flex;
+    flex-direction: column;
+    /* position: absolute; */
 }
 
 .time-details > * {
     color: rgba(216, 211, 211, 0.7);
     font-size: 14px;
+    margin: 0;
 }
 
 .event-details-section > h2 {
@@ -45,7 +52,7 @@
 .list-item a{
     text-decoration: none;
     color: rgb(201, 182, 12);
-    width: 100%;
+    /* width: 100%; */
 }
 
 .button {
