--- a/src/components/events_elements/event_elements/EventDetails.module.css
+++ b/src/components/events_elements/event_elements/EventDetails.module.css
@@ -5,10 +5,6 @@
     background-color: rgba(63, 60, 60, 0.5);
 }
 
-.container {
-    height: 100vh;
-}
-
 .details {
     background-color: rgba(39, 36, 36, 0.8);
     border-radius: 8px;
